# rust-auth-boilerplate

./: .env  Cargo.toml  diesel.toml  docker-compose.yml
migrations/2024-10-29-164820_create_user/: up.sql
migrations/2024-10-30-100234_create_accounts/: up.sql
migrations/2024-10-31-081146_add_roles/: down.sql  up.sql
migrations/2024-10-31-091408_create_accounts/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/application/use_cases/: account_use_cases.rs  auth_use_cases.rs  avatar_use_cases.rs  message_use_cases.rs  mod.rs  user_use_cases.rs
src/domain/entities/: account.rs  auth.rs  avatar.rs  message.rs  mod.rs  user.rs
src/domain/repositories/: account_repository.rs  auth_repository.rs  mod.rs  user_repository.rs
src/infrastructure/: mod.rs
src/infrastructure/repositories/: account_repository.rs  auth_repository.rs  avatar_repository.rs  message_repository.rs  mod.rs  user_repository.rs
src/infrastructure/websocket/: connection_manager.rs  realtime_message_manager.rs
src/presentation/handlers/: account_handlers.rs  auth_handlers.rs  avatar_handlers.rs  message_handlers.rs  mod.rs  user_handlers.rs  ws_handlers.rs
src/presentation/middleware/: auth.rs
src/tests/upload_avatar_test/: upload_avatar_test.rs
