[package]
name = "rust-clean-arch"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.74"
jsonwebtoken = "9.1.1"
bcrypt = "0.15.1"
chrono = { version = "0.4", features = ["serde"] }
actix-web-httpauth = "0.8.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "create_superuser"
path = "src/bin/create_superuser.rs"